--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url(https://content.fortune.com/wp-content/uploads/2017/09/816665022.jpg);
+@import url(https://media.vogue.co.uk/photos/5d544731f197840008101bc5/1:1/w_1683,h_1683,c_limit/original);
 
 *{
     margin: 0;
@@ -20,6 +20,18 @@ body{
     height: 60px;
     background: #fff;
     box-shadow: 0 25px 35px rgba(0,0,0,0.1);
+    display: flex;
+    justify-content: space-between;
+    transition: height 0.5s, width 0.5s;
+    transition-delay: 0s, 0.75s;
+    overflow: hidden;
+}
+
+.navigation.active {
+    width: 300px;
+    height: 400px;
+    transition: width 0.5s, height 0.5s;
+    transition-delay: 0s, 0.75s;
 }
 
 .navigation .userBx{
@@ -27,13 +39,109 @@ body{
     width: 60px;
     height: 60px;
     background: #fff;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    transition: 0.5s;
+    transition-delay: 0.5s;
+}
+
+.navigation.active .userBx{
+    width: calc(100% - 60px);
+    transition-delay: 0s;
+}
+
+.navigation .userBx .username{
+    white-space: nowrap;
+    color: #555;
+    font-size: 1.1em;
 }
 
 .navigation .userBx .imgBx{
     position: relative;
     min-width: 60px;
     height: 60px;
+    overflow: hidden;
     background: #000;
     border-radius: 50%;
     border: 10px solid #fff;
+}
+
+.navigation .userBx .imgBx img {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.navigation .menuToggle{
+    position: relative;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navigation .menuToggle::before{
+    content: '';
+    position: absolute;
+    width: 32px;
+    height: 2px;
+    background: #555;
+    transform: translateY(-10px);
+    box-shadow: 0 10px #555;
+    transition: 0.5s;
+}
+
+.navigation .menuToggle::after{
+    content: '';
+    position: absolute;
+    width: 32px;
+    height: 2px;
+    background: #555;
+    transform: translateY(10px);
+    transition: 0.5s;
+}
+
+.navigation.active .menuToggle::before{
+    transform: translateY(0px) rotate(45deg);
+    box-shadow: 0 0 #555;
+}
+
+.navigation.active .menuToggle::after{
+    transform: translateY(0px) rotate(-45deg);
+}
+
+.menu {
+    position: absolute;
+    width: 100%;
+    height: calc(100% - 60px);
+    margin-top: 60px;
+    padding: 20px;
+    border-top: 1px solid rgba(0,0,0,0.1);
+}
+
+.menu li {
+    list-style: none;
+}
+
+.menu li a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 20px 0;
+    font-size: 1em;
+    text-decoration: none;
+    color: #555;
+}
+
+.menu li a:hover {
+    color: #4e65ff;
+}
+
+.menu li a ion-icon {
+    font-size: 1.5em;
 }
